--- a/use-inbound-flywheel-supercharge-business.html
+++ b/use-inbound-flywheel-supercharge-business.html
@@ -127,7 +127,7 @@ Therefore, the inbound flywheel model is a client-oriented strategy where market
 <br />
 When using the flywheel model, you want to provide the best customer service experience to your customers. There shouldn&#39;t be any room for complaint, and all clients should be fully satisfied, become regulars, and even encourage others to seek you out.&nbsp;<br />
 <br />
-Think of it as the same way you would readily recommend your <u><a href="https://www.business-attorney.com/los-angeles-business-lawyers/" target="_blank">business attorney</a></u> to others if you received superb services. Anyone within their circle is likely to visit your website to confirm what they have been told. You will then take advantage of this and provide highly engaging and attractive marketing content, which will turn visitors into viable leads and, finally, regular clients if delivered well.<br />
+Think of it as the same way you would readily recommend your business attorney to others if you received superb services. Anyone within their circle is likely to visit your website to confirm what they have been told. You will then take advantage of this and provide highly engaging and attractive marketing content, which will turn visitors into viable leads and, finally, regular clients if delivered well.<br />
 <br />
 Afterward, you will be standing by with an outstanding after-sell customer service experience that will also convert them into your business&#39;s willful promoters. And the circle continues. You see, if you have many happy customers, you will also enjoy the services of numerous cheerful &quot;unpaid&quot; promoters. More sales translate to faster business growth, which is to your advantage. This is the flywheel&#39;s true meaning; to take &quot;advantage&quot; of your customers&#39; satisfaction to grow.&nbsp;<br />
 <br />
@@ -161,7 +161,7 @@ You need to know what you&#39;re getting into and if inbound and flywheel market
 
 <ul>
 	<li>To find out why your previous content marketing efforts failed.</li>
-	<li>Which objectives do you want to achieve that you weren&#39;t able to before? Remember, your goals should always be SMART (Specific, Measurable, Attainable, Relevant, and Timely) just the same way objectives are vital when <u><a href="https://www.smallbusinessattorneynyc.com/creating-an-llc/" target="_blank">creating an LLC</a></u>.</li>
+	<li>Which objectives do you want to achieve that you weren&#39;t able to before? Remember, your goals should always be SMART (Specific, Measurable, Attainable, Relevant, and Timely) just the same way objectives are vital when establish an LLC or a corporation.</li>
 </ul>
 
 <p><br />
