--- a/separate-business-personal-account.html
+++ b/separate-business-personal-account.html
@@ -104,7 +104,7 @@
 									</div>
 								</header>
 								<span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
-								<p>For small businesses, a business bank account provides a more professional way of running your business in terms of managing your financials such as tax requirements and deductions, but it&nbsp;also provides protection from lawsuits. It is important to note that in certain situations, it might be difficult to separate the two. For example in the case of a sole proprietor where the individual and the business is one and the same.&nbsp;It is perhaps for this and other reasons that most accountants and <u><a href="https://www.business-attorney.com/los-angeles-business-lawyers/" target="_blank">business lawyers</a></u> often advise that you should preferably always have a separate entity under which you conduct your business.</p>
+								<p>For small businesses, a business bank account provides a more professional way of running your business in terms of managing your financials such as tax requirements and deductions, but it&nbsp;also provides protection from lawsuits. It is important to note that in certain situations, it might be difficult to separate the two. For example in the case of a sole proprietor where the individual and the business is one and the same.&nbsp;It is perhaps for this and other reasons that most accountants and business lawyers often advise that you should preferably always have a separate entity under which you conduct your business.</p>
 
 <p>Here are three reasons to keep business and personal accounts separate:</p>
 
